--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+title: TreChurch Manifesto
+description: Mystery Edition
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+markdown: kramdown
